--- a/demo/css/index.css
+++ b/demo/css/index.css
@@ -9,3 +9,9 @@ body {
   font-family: sans-serif;
   text-align: center;
 }
+
+.testClass {
+  border: 1px solid #fff000;
+  font-size: 16px;
+  color: #dbdbdb;
+}
